+- Fixed commented out sections and css issues for content alignment.

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -58,11 +58,12 @@ html, body {
     background-color: #fff;
 	padding-left: 15px;
 	padding-right: 15px;
+	height: 65%;
 }
 
 #parent-container {
-	max-height: 65%;
-	height: 65%;
+	max-height: 100%;
+	height: 100%;
 }
 
 
